--- a/FernandaGomezG/index.html
+++ b/FernandaGomezG/index.html
@@ -14,10 +14,15 @@
         <p> En la práctica 1 realizamos una página web, en esta página compartí algunos de mis hobbies y actividades
             que me gustan hacer, estos son los links de la práctica 1 en las fechas del 13 y 15 de agosto"
         </p>
-        <li><a href="https://fernandanohemigomezgarcia.github.io/practica1/">Página sobre mis hobbies</a></li>
-        <li><a href="https://github.com/FernandaNohemiGomezGarcia/practica1.git" target="_blank">Link a mi repositorio sobre mis hobbies</a></li>
-        <li><a href="https://github.com/FernandaNohemiGomezGarcia/practica1/commits/main/?since=2025-08-13&until=2025-08-15">Commits realizados en la práctica</a></li>
-
+        <nav>
+            <ul>
+                <li><a href="https://fernandanohemigomezgarcia.github.io/practica1/">Página sobre mis hobbies</a></li>
+                <li><a href="https://github.com/FernandaNohemiGomezGarcia/practica1.git" target="_blank">Link a mi repositorio sobre mis hobbies</a></li>
+                <li><a href="https://github.com/FernandaNohemiGomezGarcia/practica1/commits/main/?since=2025-08-13&until=2025-08-15">Commits realizados en la práctica</a></li>    
+            </ul>
+        </nav>
     </main>
+    <aside></aside>
+    <footer></footer>
 </body>
 </html>
