--- a/FernandaGomezG/index.html
+++ b/FernandaGomezG/index.html
@@ -10,9 +10,9 @@
         <h1>Evidencias Fundamentos Desarrollo Web </h1>
     </header>
     <main>
-        <h2> Publicación de la práctica 1</h2>
+        <h2 style="color: rgb(70, 70, 182);"> Publicación de la práctica 1</h2>
         <p> En la práctica 1 realizamos una página web, en esta página compartí algunos de mis hobbies y actividades
-            que me gustan hacer, estos son los links de la práctica 1 en las fechas del 13 y 15 de agosto"
+            que me gustan hacer, estos son los links de la práctica 1 en las fechas del 13 y 15 de agosto.
         </p>
         <nav>
             <ul>
