--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li id="a03"><a href="#">BALDERAS GUEVARA VICTORIA ABIGAIL </a></li>
           <li id="a04"><a href="MiguelABanda/index.html">MiguelABanda </a></li>
           <li id="a05"><a href="#">CASTAÑO SALAZAR CAROLINA </a></li>
-          <li id="a06"><a href="#">CASTRO CAMARILLO JORGE EDUARDO </a></li>
+          <li id="a06"><a href="#">1Jecc </a></li>
           <li id="a07"><a href="atchz/index.html">atchz </a></li>
           <li id="a08"><a href="RickyCorCam/index.html">CORTES CAMARILLO RICARDO </a></li>
           <li id="a09"><a href="jesuscruz125/index.html">jesuscruz125 </a></li>
