--- a/ErickLTI/index.html
+++ b/ErickLTI/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evidencias</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <header>
-        <h1>Evidencias fundamentos de desarrollo web</h1>
+        <h1>Portafolio - Fundamentos de Desarrollo Web</h1>
     </header>
     <main>
         <h2>Links</h2>
