cambio en la estructura

--- a/gfuelinme/index.html
+++ b/gfuelinme/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,15 +7,16 @@
 </head>
 <body>
     <header>
-        <h1>Evidencias Fundamentos de Desarrollo Web</h1>
+        <h1 id="titulo-principal">Fundamentos de Desarrollo Web</h1>
     </header>
     <main>
         <article>
             <header>
-            <h2>Practicas</h2>
+            <h2 id="header-practicas">Practicas</h2>
             </header>
             <section>
                 <h3>Practica 1</h3>
+                <p>Realizada el 15 de Agosto del 2025</p>
                 <p>En esta practica hicimos uso de etiquetas basicas de HTML para crear una pagina web estatica sobre nuestros pasatiempos.</p>
                 <ul>
                     <li>
@@ -27,12 +28,11 @@
                     <li><a href="https://github.com/gfuelinme/practica-1/commits/main/?since=2025-08-13&until=2025-08-15" target="_blank">Commits</a>
                     </li>
                 </ul>
-                <p>Realizado el 15 de Agosto del 2025</p>
             </section>
         </article>
     </main>
     <aside></aside>
     <footer></footer>
-
+    <link rel="stylesheet" href="hoja-de-estilos.css">
 </body>
 </html>
