correccion del link de commits

--- a/gfuelinme/index.html
+++ b/gfuelinme/index.html
@@ -16,7 +16,7 @@
             </header>
             <section>
                 <h3>Practica 1</h3>
-                <p>Realizada el 15 de Agosto del 2025</p>
+                <p>Realizada el 15 de Agosto del 2025.</p>
                 <p>En esta practica hicimos uso de etiquetas basicas de HTML para crear una pagina web estatica sobre nuestros pasatiempos.</p>
                 <ul>
                     <li>
@@ -25,7 +25,7 @@
                     <li>
                         <a href="https://github.com/gfuelinme/practica-1" target="_blank">Repositorio</a>
                     </li>
-                    <li><a href="https://github.com/gfuelinme/practica-1/commits/main/?since=2025-08-13&until=2025-08-15" target="_blank">Commits</a>
+                    <li><a href="https://github.com/gfuelinme/practica-1/commits/main/?since=2025-08-15&until=2025-08-15" target="_blank">Commits</a>
                     </li>
                 </ul>
             </section>
