Bug arreglado de las cajas para que sean 2 por fila

--- a/TheRafaMan06/index.html
+++ b/TheRafaMan06/index.html
@@ -8,28 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <heaer>
+    <header>
         <h1>Practicas</h1>
-    </heaer>
+    </header>
     <main> 
-        <div class="caja-flez   ">
+        <div class="contenedor-grid">
             <div class="caja">
-                <h2> Practica 1</h2>
+                <h2>Practica 1</h2>
                 <p>El objetivo central de esta práctica es simular un flujo de trabajo real de desarrollo web utilizando Git y GitHub. No se trata solo de escribir código, sino de aprender a gestionarlo, versionarlo y publicarlo de manera profesional.</p>
 
                 <p>Vas a crear desde cero una página web personal (también llamada "landing page") donde serás tú el protagonista. El contenido girará en torno a tus pasatiempos o hobbies, lo que le dará un toque personal y único.</p>
 
-                <button class="boton outline" onclick="window.open('https://github.com/TheRafaMan06/TheRafaMan06.github.io', '_blank')">Repositorio </button>
-                <button class="boton outline" onclick="window.open('https://therafaman06.github.io', '_blank')">Sitio Publicado </button>
-                <button class="boton outline" onclick="window.open('https://github.com/TheRafaMan06/TheRafaMan06.github.io/commits?since=2025-08-13&until=2025-08-15', '_blank')">Commits </button>
+                <button class="boton outline" onclick="window.open('https://github.com/TheRafaMan06/TheRafaMan06.github.io', '_blank')">Repositorio</button>
+                <button class="boton outline" onclick="window.open('https://therafaman06.github.io', '_blank')">Sitio Publicado</button>
+                <button class="boton outline" onclick="window.open('https://github.com/TheRafaMan06/TheRafaMan06.github.io/commits?since=2025-08-13&until=2025-08-15', '_blank')">Commits</button>
             </div>
             <div class="caja">
-                <h2> Practica 2</h2>
+                <h2>Practica 2</h2>
                 <p>En esta practica basicamente se realizo esta pagina para guardar todas las que haremos en el semestre</p>
 
-                <button class="boton outline" onclick="window.open('https://github.com/FDW52AD2025/website52/blob/main/TheRafaMan06/index.html', '_blank')">Link Pagina Personal </button>
-                <button class="boton outline" onclick="window.open('https://github.com/FDW52AD2025/website52/commits?author=TheRafaMan06&since=2025-08-20&until=2025-08-22', '_blank')">Commits </button>
-
+                <button class="boton outline" onclick="window.open('https://github.com/FDW52AD2025/website52/blob/main/TheRafaMan06/index.html', '_blank')">Link Pagina Personal</button>
+                <button class="boton outline" onclick="window.open('https://github.com/FDW52AD2025/website52/commits?author=TheRafaMan06&since=2025-08-20&until=2025-08-22', '_blank')">Commits</button>
             </div>
         </div>
     </main>
