--- a/oswtobias06/index.html
+++ b/oswtobias06/index.html
@@ -10,16 +10,30 @@
         <h1>Evidencias Fundamentos de desarrollo web</h1>
     </header>
     <main>
-        <h2>Practica 1 - Evidencia 1</h2>
+        <article>
+            <h2>EVIDENCIA 1</h2>
+            <h3>Practica 1</h3>
         <p>En la practica 1 de la evidencia 1, hicimos una sencilla pagina web donde platicamos sobre nuestros pasatiempos favoritos.</p>
         <h3>Links - Fechas del 13 a 15 de agosto</h3>
-        <li>Repositorio: <a href="https://github.com/oswtobias06/EV1practica1/" target="_blank">https://github.com/oswtobias06/EV1practica1/
+        <li><a href="https://github.com/oswtobias06/EV1practica1/" target="_blank">Repositorio
 </a></li>
-        <li>Sito publicado: <a href="https://oswtobias06.github.io/EV1practica1/" target="_blank">https://oswtobias06.github.io/EV1practica1/
+        <li><a href="https://oswtobias06.github.io/EV1practica1/" target="_blank">Sito publicado
 </a></li>
-        <li>Commits: <a href="https://github.com/oswtobias06/EV1practica1/commits/main/?since=2025-08-13&until=2025-08-15" target="_blank">https://github.com/oswtobias06/EV1practica1/commits/main/?since=2025-08-13&until=2025-08-15
+        <li><a href="https://github.com/oswtobias06/EV1practica1/commits/main/?since=2025-08-13&until=2025-08-15" target="_blank">Commits
+</a></li>
+        </article>
+        <article>
+            <h3>Practica 2</h3>
+        <p>En la practica 2 de la evidencia 1, creamos nuestra carpeta de evidencias donde ajuntamos todos los links de las practicas que vamos haciendo, todo esto dentro del repositorio de la clase</p>
+        <h3>Links - Fechas del 20 a 22 de agosto</h3>
+        <li><a href="https://fdw52ad2025.github.io/website52/oswtobias06/index.html" target="_blank">Pagina personal
+</a></li>
+        <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=oswtobias06&since=2025-08-20&until=2025-08-22" target="_blank">Commits
+</a></li>
+        </article>
     </main>
     <aside></aside>
-    <footer></footer>
+    <footer>
+    </footer>
 </body>
 </html>
