--- a/ernesgarcia06/index.html
+++ b/ernesgarcia06/index.html
@@ -11,6 +11,7 @@
     </header>
     <main>
         <h2>Evidencia 1</h2>
+        <h3>Práctica 1</h3>
         <p>En esta evidencia 1 realice una presentación en donde hablo un poco sobre mi y mis pasatiempos</p>
         <p>Realizado entre el 13 y 15 de agosto del 2025</p>
         <nav>
@@ -18,6 +19,15 @@
                 <li><a href="https://ernesgarcia06.github.io/Evidencia-1/" target="_blank">Link pagina</a></li>
                 <li><a href="https://github.com/ernesgarcia06/Evidencia-1.git" target="_blank">Link Repositorio</a></li>
                 <li><a href="https://github.com/ernesgarcia06/Evidencia-1/commits/main/?since=2025-08-13&until=2025-08-15" target="_blank">Link Commits</a></li>
+            </ul>
+        </nav>
+        <h3>Práctica 2</h3>
+        <p>En esta práctica se creo nuestra carpeta personal, en donde se realizo esta pagina.</p>
+        <p>Realizado entre el 20 y 22 de agosto del 2025</p>
+        <nav>
+            <ul>
+                <li><a href="https://fdw52ad2025.github.io/website52/ernesgarcia06/index.html" target="_blank">Link pagina personal</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-08-20&until=2025-08-22" target="_blank">Link Commits</a></li>
             </ul>
         </nav>
     </main>
