--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li id="a16"><a href="ernesgarcia06/index.html">ernesgarcia06 </a></li>
           <li id="a17"><a href="#">HERNANDEZ SAUCEDA EVELYN MICHEL </a></li>
           <li id="a18"><a href="Marikve7/index.html">Marikve7</a></li>
-          <li id="a19"><a href="#">LEAL GONZALEZ ANDRES </a></li>
+          <li id="a19"><a href="RdeReimer/index.html">RdeReimer </a></li>
           <li id="a20"><a href="#">LOZANO RAMOS CHRISTIAN LEONARDO </a></li>
           <li id="a21"><a href="#">LUNA LOPEZ IVAN ANTONIO </a></li>
           <li id="a22"><a href="#">MARTINEZ GARCIA VALERIA LISSET </a></li>
@@ -48,8 +48,8 @@
           <li id="a33"><a href="aaronrdzr/index.html">aaronrdzr </a></li>
           <li id="a34"><a href="gfuelinme/index.html">gfuelinme</a></li>
           <li id="a35"><a href="/website52/aLe.php27/index.html">aLe.php27 </a></li>
-          <li id="a36"><a href="bere-ops/index.html">Bere-ops </a></li>          
-          <li id="a37"><a href="oswtobias06/index.html">oswtobias06 </a></li>          
+          <li id="a36"><a href="bere-ops/index.html">Bere-ops </a></li>
+          <li id="a37"><a href="oswtobias06/index.html">oswtobias06 </a></li>
           <li id="a38"><a href="ianstiglitz/index.html">IanStiglitz</a></li>
           <li id="a39"><a href="luca384/index.html">luca384 </a></li>
           <li id="a40"><a href="#">VALERIO AGUIRRE GISELLE NAHOMI </a></li>
