cambios en la ventana de la pagina

--- a/Hugo-0699/index.html
+++ b/Hugo-0699/index.html
@@ -21,9 +21,9 @@
                 <nav>
                     <h3>Enlaces de GitHub</h3>
                     <ul>
-                        <li><a href="https://github.com/Hugo-0699/Practica-1.git">Repositorio de GitHub</a></li>
-                        <li><a href="https://hugo-0699.github.io/Practica-1/">Sitio publicado</a></li>
-                        <li><a href="https://github.com/Hugo-0699/Practica-1/commits/main/?since=2025-08-13&until=2025-08-15">Commits del repositorio</a></li>
+                        <li><a target="_blank" href="https://github.com/Hugo-0699/Practica-1.git">Repositorio de GitHub</a></li>
+                        <li><a target="_blank" href="https://hugo-0699.github.io/Practica-1/">Sitio publicado</a></li>
+                        <li><a target="_blank" href="https://github.com/Hugo-0699/Practica-1/commits/main/?since=2025-08-13&until=2025-08-15">Commits del repositorio</a></li>
                     </ul>
                     <hr>
                 </nav>
