--- a/gfuelinme/index.html
+++ b/gfuelinme/index.html
@@ -30,6 +30,15 @@
                     </li>
                 </ul>
             </section>
+            <section>
+                <h3>Practica 2</h3>
+                <p>En esta practica se creo una carpeta personal dentro de una organizacion para trabajar una pagina web colaborativa.</p>
+                <p>Realizada el 22 de Agosto del 2025</p>
+                <ul>
+                    <li><a href="https://fdw52ad2025.github.io/website52/gfuelinme/index.html">Pagina Personal</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits?author=gfuelinme&since=2025-08-20&until=2025-08-22">Commits</a></li>
+                </ul>
+            </section>
         </article>
     </main>
     <aside></aside>
