Se realiza la práctica 2

--- a/ErickLTI/index.html
+++ b/ErickLTI/index.html
@@ -11,7 +11,7 @@
         <h1>Portafolio - Fundamentos de Desarrollo Web</h1>
     </header>
     <main>
-        <h2>Links</h2>
+        <h2>Práctica 1</h2>
         <article>
             <section>
                 <header>
@@ -32,6 +32,27 @@
 
                 <footer>
                     <p>Práctica realizada entre 13 y 15 de Agosto del año 2025</p>
+                </footer>
+            </section>
+
+            <h2>Práctica 2</h2>
+
+            <section>
+                <header>
+                    <h3>Se presenta lo solicitado por el maestro para la correcta validación de la práctica 2.</h3>
+                </header>
+
+                <!-- desarrollo -->
+                 <li>
+                    <a href="https://fdw52ad2025.github.io/website52/ErickLTI/index.html">Página personal</a>
+                 </li>
+
+                 <li>
+                    <a href="https://github.com/FDW52AD2025/website52/commits/main/ErickLTI?since=2025-08-20&until=2025-08-22">Commits</a>
+                 </li>
+
+                <footer>
+                    <p>Práctica realizada entre 20 y 22 de Agosto del año 2025</p>
                 </footer>
             </section>
 
