--- a/aLe.php27/index.html
+++ b/aLe.php27/index.html
@@ -25,6 +25,31 @@
                 </ul>
             </section>
         </article>
+        <article>
+            <header>
+                <h3>Practica 2 - 20/08/2025 al 22/08/2025</h3>
+            </header>
+            <p>Para la practica 2 se alojaron los primeros links de la practica 1 en el repositorio de la organización</p>
+            <section>
+                <ul>
+                <li><a href="https://fdw52ad2025.github.io/website52/aLe.php27/index.html">PAGINA PERSONAL</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=myAle27admin&since=2025-08-20&until=2025-08-22">COMMITS DEL 20/08/2025 al 22/08/2025</a></li>
+                </ul>
+            </section>
+        </article>
+                <article>
+            <header>
+                <h3>Practica 3 - 27/08/2025 al 29/08/2025</h3>
+            </header>
+            <p>Para la practica 2 se alojaron los primeros links de la practica 1 en el repositorio de la organización</p>
+            <section>
+                <ul>
+                <li><a href="https://fdw52ad2025.github.io/website52/myAle27admin/pasatiempos_v2/index.html">PAGINA PERSONAL</a></li>
+                <li><a href=" https://github.com/FDW52EJ2025/website52/commits/main/?author=usuarioGitHub&since=2025-08-27&until=2025-08-27">COMMITS HECHOS EN CLASE 27/08/2025</a></li>
+                <li><a href="https://github.com/FDW52EJ2025/website52/commits/main/?author=usuarioGitHub&since=2025-08-27&until=2025-08-29">COMMITS DEL 27/08/2025 al 29/08/2025</a></li>
+                </ul>
+            </section>
+        </article>
     </main>
     <aside></aside>
     <footer></footer>
