--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li id="a22"><a href="#">MARTINEZ GARCIA VALERIA LISSET </a></li>
           <li id="a23"><a href="#">MARTINEZ LOZANO LUIS EMILIANO </a></li>
           <li id="a24"><a href="/ErickLTI/index.html">ErickLTI </a></li>
-          <li id="a25"><a href="/F-rn-ndo/index.html">F-rn-ndo</a></li>
+          <li id="a25"><a href="F-rn-ndo/index.html">F-rn-ndo</a></li>
           <li id="a26"><a href="#">MONTEMAYOR ALEMAN EDUARDO EMILIANO </a></li>
           <li id="a27"><a href="#">OJEDA HERNANDEZ ILSE GUADALUPE </a></li>
           <li id="a28"><a href="/CarlosPortalesM/index.html">CarlosPortalesM </a></li>
