agregue la practica 2

--- a/gfuelinme/index.html
+++ b/gfuelinme/index.html
@@ -21,7 +21,7 @@
                 <p>En esta practica hicimos uso de etiquetas basicas de HTML para crear una pagina web estatica sobre nuestros pasatiempos.</p>
                 <ul>
                     <li>
-                        <a href="https://gfuelinme.github.io/practica-1/" target="_blank">Sitio Web</a>
+                        <a href="https://gfuelinme.github.io/practica-1/" target="_blank">Pagina web</a>
                     </li>
                     <li>
                         <a href="https://github.com/gfuelinme/practica-1" target="_blank">Repositorio</a>
@@ -35,7 +35,7 @@
                 <p>En esta practica se creo una carpeta personal dentro de una organizacion para trabajar una pagina web colaborativa.</p>
                 <p>Realizada el 22 de Agosto del 2025</p>
                 <ul>
-                    <li><a href="https://fdw52ad2025.github.io/website52/gfuelinme/index.html">Pagina Personal</a></li>
+                    <li><a href="https://fdw52ad2025.github.io/website52/gfuelinme/index.html">Pagina personal</a></li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits?author=gfuelinme&since=2025-08-20&until=2025-08-22">Commits</a></li>
                 </ul>
             </section>
