Se registró evidencia 2

--- a/FerminEstrada52/index.html
+++ b/FerminEstrada52/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Evidencias - Fermín Isaí Estrada Vera</h1>
+    <section>
     <h2>Práctica 1</h2>
         <h3>Descripción</h3>
             <p>Sitio web sobre intereses personales.</p>
@@ -16,5 +17,16 @@
             <li><a href="https://github.com/fer-ecs/webpage/commits/main/">Commits</a></li>
         <h3>Fecha de commits</h3>
             <p>Del 13 al 15 de agosto</p>
+    </section>
+    <section>
+    <h2>Práctica 2</h2>
+        <h3>Descripción</h3>
+            <p>Página de registro de evidencias dentro de la organización.</p>
+        <h3>Links</h3>
+            <li><a href="https://fdw52ad2025.github.io/website52/FerminEstrada52/index.html">Página personal</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FerminEstrada52&since=2025-08-20&until=2025-08-22">Commits</a></li>
+        <h3>Fecha de commits</h3>
+            <p>Del 20 al 22 de agosto</p>
+    </section>
 </body>
 </html>
