Agregando evidencia 2 y carpetas para evidencia 3

--- a/KingBootleg/index.html
+++ b/KingBootleg/index.html
@@ -15,6 +15,11 @@
         <a href="https://github.com/KingBootleg/practica1real">Link Repositorio</a>
         <a href="https://kingbootleg.github.io/practica1real/">Link Pagina Publicada</a>
         <a href="https://github.com/KingBootleg/practica1real/commits/main">Link commits</a>
+
+        <h1>Practica 2</h1>
+        <h1>Crear la pagina donde subiremos todas las evidencias</h1>
+        <p>Ahora aqui es donde se subiran las evidencias</p>
+        <a href="https://github.com/FDW52AD2025/website52/commit/442e33d08dcbcb7d4fed1fcde2fcde5b99a070f1">Link del commit</a>
     </main>
     <aside></aside>
     <footer></footer>
