--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li id="a18"><a href="/Marikve7/index.html">Marikve7</a></li>
           <li id="a19"><a href="#">LEAL GONZALEZ ANDRES </a></li>
           <li id="a20"><a href="#">LOZANO RAMOS CHRISTIAN LEONARDO </a></li>
-          <li id="a21"><a href="#">LUNA LOPEZ IVAN ANTONIO </a></li>
+          <li id="a21"><a href="ivanmane\index.html">ivanmane </a></li>
           <li id="a22"><a href="#">MARTINEZ GARCIA VALERIA LISSET </a></li>
           <li id="a23"><a href="#">MARTINEZ LOZANO LUIS EMILIANO </a></li>
           <li id="a24"><a href="/ErickLTI/index.html">ErickLTI </a></li>
@@ -44,7 +44,7 @@
           <li id="a29"><a href="#">RAMIREZ ESCOBEDO JESUS ALEJANDRO </a></li>
           <li id="a30"><a href="NerickRamirez/index.html">NerickRamirez</a></li>
           <li id="a31"><a href="#">Bejesusrey </a></li>
-          <li id="a32"><a href="#">RIOS VEGA BRAIAN DE JESUS </a></li>
+          <li id="a32"><a href="AscuOnTop\index.html">AscuOnTop </a></li>
           <li id="a33"><a href="#">RODRIGUEZ ROSAS AARON </a></li>
           <li id="a34"><a href="gfuelinme/index.html">gfuelinme</a></li>
           <li id="a35"><a href="#">SANTIAGO CORONADO ALEJANDRO </a></li>
