Arreglar usuarion. Respetar usuarios

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li id="a13"><a href="#">GOMEZ GARCIA FERNANDA NOHEMI </a></li>
           <li id="a14"><a href="#">GONZALEZ INFANTE ALAN JAIR </a></li>
           <li id="a15"><a href="diegoalgosa/index.html">diegoalgosa </a></li>
-          <li id="a16"><a href="#">ernesgarcia06 </a></li>
+          <li id="a16"><a href="ernesgarcia06/index.html">ernesgarcia06 </a></li>
           <li id="a17"><a href="#">HERNANDEZ SAUCEDA EVELYN MICHEL </a></li>
           <li id="a18"><a href="/Marikve7/index.html">Marikve7</a></li>
           <li id="a19"><a href="#">LEAL GONZALEZ ANDRES </a></li>
