--- a/CarlosPortalesM/index.html
+++ b/CarlosPortalesM/index.html
@@ -17,6 +17,12 @@
         <li>Página: <a href="https://carlosportalesm.github.io/WebPage/" target="_blank">Link de la página</a></li>
         <p>Por ultimo el link de mis commits de la fecha del 13 al 15 de agosto</p>
         <li>Commits: <a href="https://github.com/CarlosPortalesM/WebPage/commits/main/?since=2025-08-13&until=2025-08-15" target="_blank">Link de mis commits</a></li>
+
+        <h2>Práctica 2 - Links</h2>
+        <p>En esta segunda práctica cree una carpeta personal para mis prácticas dentro del repositorio del grupo 52</p>
+        <li>Pagina personal: <a href="https://fdw52ad2025.github.io/website52/CarlosPortalesM/index.html" target="_blank">Link de pagina de practicas</a></li>
+        <p>Y el link de mis commits de la fecha del 20 al 22 de agosto</p>
+        <li>Commits: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=CarlosPortalesM&since=2025-08-20&until=2025-08-22" target="_blank">Link de pagina de practicas</a></li>
     </main>
     <aside>
 
