--- a/FernandaGomezG/practica3/pagina1.html
+++ b/FernandaGomezG/practica3/pagina1.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mis Hobbies</title>
 </head>
 <body>
-    
+    <header>
+        <main>
+            <h1>🎶✨ CONCIERTOS 🎶✨</h1>
+            <p></p>
+        </main>
+    </header>
 </body>
 </html>
