--- a/Bere-ops/index.html
+++ b/Bere-ops/index.html
@@ -19,6 +19,12 @@
         </ul>
         <h2> Fechas </h2>
         <p>Del 14 al 15 de agosto</p>
+
+        <h2>Práctica 2</h2>
+        <p>En esta práctica se realizó esta página para ir registrando nuestros trabajos del semestre</p>
+        <ul>
+            <li><a href="https://github.com/FDW52AD2025/website52/blob/5f59d163f489cdf0244524124ca05d2087fa2afc/index.html">Link Commits</a></li>
+        </ul>
     </main>
     <aside></aside>
     <footer></footer>
