--- a/ianstiglitz/pasatiemposver2/index1.html
+++ b/ianstiglitz/pasatiemposver2/index1.html
@@ -6,10 +6,50 @@
     <title>Practica 3</title>
 </head>
 <body>
-    <header></header>
-    <nav></nav>
-    <main></main>
-    <aside></aside>
-    <footer></footer>
+    <header>
+        <h1>
+            Practica 3- Pasatiempos
+        </h1>
+    </header>
+    <nav>
+        <a href="index.html">Inicio</a> 
+        <a href="index1.html">Videojuegos</a> 
+        <a href="index2.html">Cocinar</a> 
+        <a href="index3.html">Escuchar musica</a> 
+        <a href="index4.html">Tocar guitarra</a>
+    </nav>
+    <main>
+        <h2>Videojuegos</h2>
+            <p>Me gustan los videojuegos porque me permiten desconectarme un rato del mundo.</p>
+            <img src="https://images.pexels.com/photos/3165335/pexels-photo-3165335.jpeg" alt="Imagen de videojuegos" width="300px">
+    </main>
+    <aside>
+    <table border="1">
+        <caption>Videojuegos favoritos</caption>
+        <tr>
+            <th>Nombre</th>
+            <th>Género</th>
+            <th>Plataforma</th>
+        </tr>
+        <tr>
+            <td>Borderlands 2</td>
+            <td>Aventura</td>
+            <td>PC, Consolas</td>
+        </tr>
+        <tr>
+            <td>Minecraft</td>
+            <td>Sandbox</td>
+            <td>PC, Consolas</td>
+        </tr>
+        <tr>
+            <td>Bioshock</td>
+            <td>Aventura</td>
+            <td>PC, Consolas</td>
+        </tr>
+
+    </aside>
+    <footer>
+        <p>Desarrollado por ITR</p>
+    </footer>
 </body>
 </html>
