Links de enlaces entre paginas y main

--- a/victoriabalderas/pasatiemposver2/pagina4.html
+++ b/victoriabalderas/pasatiemposver2/pagina4.html
@@ -9,7 +9,13 @@
 
 </head>
 <body>
-    <header><h1>Mis películas favoritas</h1></header>
+    <header>
+        <nav>
+            <ul>
+                <a href="mainpasatiempos.html">Regresar a página principal</a>
+            </ul>
+        </nav>
+        <h1>Mis películas favoritas</h1></header>
     <nav></nav>
     <main></main>
 
