--- a/ianstiglitz/pasatiemposver2/index2.html
+++ b/ianstiglitz/pasatiemposver2/index2.html
@@ -7,9 +7,45 @@
 </head>
 <body>
     <header></header>
-    <nav></nav>
-    <main></main>
-    <aside></aside>
-    <footer></footer>
+    <nav>
+        <a href="index.html">Inicio</a> 
+        <a href="index1.html">Videojuegos</a> 
+        <a href="index2.html">Cocinar</a> 
+        <a href="index3.html">Escuchar musica</a> 
+        <a href="index4.html">Tocar guitarra</a>
+    </nav>
+    <main>
+        <h2>Cocinar</h2>
+            <p>Me gusta cocinar porque es una actividad creativa y relajante que me permite experimentar con diferentes sabores y técnicas culinarias.</p>
+            <img src="https://images.pexels.com/photos/1640777/pexels-photo-1640777.jpeg" alt="Imagen de cocinar" width="300px">
+    </main>
+    <aside>
+    <table border="1">
+        <caption>Recetas favoritas</caption>
+        <tr>
+            <th colspan="2">Receta</th>
+            <th>Tiempo</th>
+            <th>Dificultad</th>
+        </tr>
+        <tr>
+            <td colspan="2">Pizza casera</td>
+            <td>1 hora</td>
+            <td>Media</td>
+        </tr>
+        <tr>
+            <td colspan="2">Tacos de pollo</td>
+            <td>30 min</td>
+            <td>Fácil</td>
+        </tr>
+        <tr>
+            <td colspan="2">Brownies</td>
+            <td>45 min</td>
+            <td>Fácil</td>
+        </tr>
+    </table>
+    </aside>
+    <footer>
+        <p>Desarrollado por ITR</p>
+    </footer>
 </body>
 </html>
