--- a/Bejesusrey/index.html
+++ b/Bejesusrey/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Practicas</title>
 </head>
 <body>
 
@@ -25,6 +25,15 @@
             <li><a href="https://github.com/Bejesusrey/Ev1Practica1/commits/main/">Link de los commits</a></li>
         </ul>
 
+        <hr>
+
+        <ul>
+            <li><a href="">Link de Pagina Personal</a></li>
+            <li><a href="">Link Commits Trabajo en Clase 27 de agosto</a></li>
+            <li><a href="">Link de los Commits</a></li>
+        </ul>
+
     </main>
+    
 </body>
 </html>
