--- a/TheRafaMan06/index.html
+++ b/TheRafaMan06/index.html
@@ -27,11 +27,19 @@
                 <h2>Practica 2</h2>
                 <p>En esta practica basicamente se realizo esta pagina para guardar todas las que haremos en el semestre</p>
 
-                <button class="boton outline" onclick="window.open('https://github.com/FDW52AD2025/website52/blob/main/TheRafaMan06/index.html', '_blank')">Link Pagina Personal</button>
+                <button class="boton outline" onclick="window.open('https://github.com/FDW52AD2025/website52/blob/main/TheRafaMan06/index.html', '_blank')">Pagina Personal</button>
                 <button class="boton outline" onclick="window.open('https://github.com/FDW52AD2025/website52/commits?author=TheRafaMan06&since=2025-08-20&until=2025-08-22', '_blank')">Commits</button>
+            </div>
+            <div class="caja">
+                <h2>Practica 3</h2>
+                <p>En esta practica basicamente se realizo esta pagina para guardar todas las que haremos en el semestre</p>
+
+                <button class="boton outline" onclick="window.open('https://github.com/FDW52AD2025/website52/blob/main/TheRafaMan06/index.html', '_blank')">Pagina Personal</button>
+                <button class="boton outline" onclick="window.open('https://github.com/FDW52AD2025/website52/commits?author=TheRafaMan06&since=2025-08-20&until=2025-08-22', '_blank')">Commits 27 Agosto</button>
+                <button class="boton outline" onclick="window.open('https://github.com/FDW52AD2025/website52/commits?author=TheRafaMan06&since=2025-08-20&until=2025-08-22', '_blank')">Commits 27-29 Agosto</button>
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>Hecho por Abdiel Rafael Aguilar Linares</footer>
 </body>
 </html>
