--- a/atchz/index.html
+++ b/atchz/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <h1>Evidencias Fundamentos de desarrollo web</h1>
+      <h1>Fundamentos de desarrollo web: Evidencias</h1>
     </header>
     <main>
       <article>
@@ -21,29 +21,67 @@
           </header>
 
           <p>Pagina web sobre nuestros pasatiempos</p>
-          <ul>
-            <li>
-              <a href="https://github.com/atchz/Practica-1" target="_blank"
-                >Link del repositorio</a
-              >
-            </li>
-            <li>
-              <a href="https://atchz.github.io/Practica-1/" target="_blank"
-                >Link de la Página</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://github.com/atchz/Practica-1/commits/main/?since=2025-08-13&until=2025-08-15"
-                target="_blank"
-                >Link de los commits</a
-              >
-            </li>
-          </ul>
+          <nav>
+            <ul>
+              <li>
+                <a href="https://github.com/atchz/Practica-1" target="_blank"
+                  >Link del repositorio</a
+                >
+              </li>
+              <li>
+                <a href="https://atchz.github.io/Practica-1/" target="_blank"
+                  >Link de la Página</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://github.com/atchz/Practica-1/commits/main/?since=2025-08-13&until=2025-08-15"
+                  target="_blank"
+                  >Link de los commits</a
+                >
+              </li>
+            </ul>
+          </nav>
 
           <footer>
             <p>Realizado entre el 13 al 15 de Agosto del año 2025</p>
           </footer>
+        </section>
+
+        <section>
+          <header>
+            <h3>Practica 2</h3>
+          </header>
+
+          <p>
+            En esta práctica se creó una carpeta personal en la organización y
+            dentro de la misma se agregó un archivo llamado index.html.
+          </p>
+          <p>
+            El archivo index.html será la página personal de cada estudiante. Se
+            solicitó agregar los links de la primera práctica.
+          </p>
+          <p>Fecha commits: 20 al 22 de Agosto.</p>
+
+          <nav>
+            <ul>
+              <li>
+                <a
+                  href="https://fdw52ad2025.github.io/website52/atchz/index.html"
+                  target="_blank"
+                  >Link de la Página</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://github.com/FDW52AD2025/website52/commits/main/?author=atchz&since=2025-08-20&until=2025-08-22"
+                  target="_blank"
+                  >Link de los commits</a
+                >
+              </li>
+            </ul>
+          </nav>
+          <footer></footer>
         </section>
 
         <footer>
