--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <li id="a32"><a href="#">RIOS VEGA BRAIAN DE JESUS </a></li>
           <li id="a33"><a href="#">RODRIGUEZ ROSAS AARON </a></li>
           <li id="a34"><a href="gfuelinme/index.html">gfuelinme</a></li>
-          <li id="a35"><a href="/aLe.php27/index.html">SANTIAGO CORONADO ALEJANDRO </a></li>
+          <li id="a35"><a href="website52/aLe.php27/index.html">aLe.php27</a></li>
           <li id="a36"><a href="#">SOLIS SANTIAGO MAYRIN BERENICE </a></li>
           <li id="a37"><a href="oswtobias06/index.html">oswtobias06 </a></li>
           <li id="a38"><a href="ianstiglitz/index.html">IanStiglitz</a></li>
