--- a/aLe.php27/pasatiempos_v2/test.html
+++ b/aLe.php27/pasatiempos_v2/test.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pasatiempos_V2</title>
+    <title>Test</title>
 </head>
 <body>
-    <h2>Aqui ira un menú pasado de burger</h2>
-    <p>Un Geto starboy</p>
-    <img width="500" src="imagenes/getostarboy.jpg">
+    <p>Test sobre todo lo visto</p>
 </body>
 </html>
