--- a/ianstiglitz/pasatiemposver2/index2.html
+++ b/ianstiglitz/pasatiemposver2/index2.html
@@ -6,7 +6,11 @@
     <title>Practica 3</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>
+            Practica 3- Pasatiempos
+        </h1>
+    </header>
     <nav>
         <a href="index.html">Inicio</a> 
         <a href="index1.html">Videojuegos</a> 
