Corrección links entre páginas (nav)

--- a/victoriabalderas/pasatiemposver2/mainpasatiempos.html
+++ b/victoriabalderas/pasatiemposver2/mainpasatiempos.html
@@ -22,18 +22,17 @@
 
         <nav>
             <ul>
-                <li><a href="pagina1.html">La danza en mi vida</li>
-                <li><a href="pagina2.html">Mis gustos musicales</li>
-                <li><a href="pagina3.html">Mi trabajo</li>
-                <li><a href="pagina4.html">Mis películas favoritas</li>
+                <li><a href="pagina1.html">  La danza en mi vida</a></li>
+                <li><a href="pagina2.html"> Mis gustos musicales</a></li>
+                <li><a href="pagina3.html"> Mi trabajo</a></li>
+                <li><a href="pagina4.html"> Mis películas favoritas</a></li>
+                <li><a href="pagina5.html"> Mis musicales de Broadway preferidos</a></li>
             </ul>
         </nav>  
     </main>
     
     <footer>
-        <address>
-            <p>Desarrollado por Victoria Balderas Guevara.</p>
-        </address>
+        <address> Desarrollado por Victoria Abigail Balderas Guevara</address>
     </footer>
     
 </body>
