--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li id="a05"><a href="#">CASTAÑO SALAZAR CAROLINA </a></li>
           <li id="a06"><a href="#">CASTRO CAMARILLO JORGE EDUARDO </a></li>
           <li id="a07"><a href="atchz/index.html">atchz </a></li>
-          <li id="a08"><a href="#">CORTES CAMARILLO RICARDO </a></li>
+          <li id="a08"><a href="RickyCorCam/index.html">CORTES CAMARILLO RICARDO </a></li>
           <li id="a09"><a href="jesuscruz125/index.html">jesuscruz125 </a></li>
           <li id="a10"><a href="#">ESCALANTE COLUNGA JAFET EDUARDO </a></li>
           <li id="a11"><a href="FerminEstrada52/index.html">fer-ecs </a></li>
