--- a/ianstiglitz/pasatiemposver2/index4.html
+++ b/ianstiglitz/pasatiemposver2/index4.html
@@ -12,11 +12,11 @@
         </h1>
     </header>
     <nav>
-        <a href="index.html">Inicio</a> 
-        <a href="index1.html">Videojuegos</a> 
-        <a href="index2.html">Cocinar</a> 
-        <a href="index3.html">Escuchar musica</a> 
-        <a href="index4.html">Tocar guitarra</a>
+        <a href="ianstiglitz/pasatiempos/index.html">Inicio</a> 
+        <a href="ianstiglitz/pasatiempos/index1.html">Videojuegos</a> 
+        <a href="ianstiglitz/pasatiempos/index2.html">Cocinar</a> 
+        <a href="ianstiglitz/pasatiempos/index3.html">Escuchar musica</a> 
+        <a href="ianstiglitz/pasatiempos/index4.html">Tocar guitarra</a>
     </nav>
     <main>
         <h2>Tocar guitarra</h2>
