--- a/ianstiglitz/index.html
+++ b/ianstiglitz/index.html
@@ -8,6 +8,8 @@
 <body>
     <header>
         <h1>Evidencias Fundamentos de desarrollo web</h1>
+    </header>
+    <main>
         <h2>Práctica 1: Pasatiempos Treviño</h2>
         <p>Se debe realizar un solo documento html donde se integre información sobre sus pasatiempos. Utilizar las etiquetas: meta, title, header, main,footer, article, section, img y p. Aplicar estilos sencillos como color de texto, fondo y borde. Para los estilos utilizar un archivo externo css. Se necesita que realice 1 commit por cada tema que desarrolle.</p>
         <p>A continuacion se muestra los links acordados: </p>
@@ -16,9 +18,7 @@
             <li><a href="https://github.com/IanStiglitz/Practica1_PasatiemposTrevi-o">Página del repositorio</a></li>
             <li><a href="https://github.com/IanStiglitz/Practica1_PasatiemposTrevi-o/commits/master">Página de los commits</a></li>
         </ul>
-
-    </header>
-    <main></main>
+    </main>
     <aside></aside>
     <footer></footer>
 </body>
