Paginas creadas y css

--- a/jesuscruz125/pasatiemposv2/pasatiempo1.html
+++ b/jesuscruz125/pasatiemposv2/pasatiempo1.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="estilosp3.css">
+    <title>Actividades físicas</title>
 </head>
 <body>
     <header>
@@ -13,6 +14,12 @@
         <h2>Basketball</h2>
         <p class="Deporte">Desde hace tiempo he visto diferentes juegos de la NBA, especialmente los más antiguos, donde participaron leyendas del baloncesto como Michael Jordan. Actualmente, mi principal inspiración para practicar este deporte es Stephen Curry.</p>
         <img width="1000px" src="https://images.pexels.com/photos/163452/basketball-dunk-blue-game-163452.jpeg" alt="Fotografía de un jugador de Basketball">
+
+
+        <h2>Entrenamiento físico</h2>
+        <p class="Deporte">Me gusta ejercitarme para mantener un cuerpo sano y estar físicamente activo. Aunque disfruto mucho de este pasatiempo, reconozco que requiere bastante esfuerzo, por lo que procuro hacerlo con el objetivo de mantenerme saludable y no tomarlo de manera demasiado competitiva.</p>
+
+
     </main>
     <aside>
         
