modificacion de pagina personal, faltan los links

--- a/ianstiglitz/index.html
+++ b/ianstiglitz/index.html
@@ -18,6 +18,16 @@
             <li><a href="https://github.com/IanStiglitz/Practica1_PasatiemposTrevi-o">Página del repositorio</a></li>
             <li><a href="https://github.com/IanStiglitz/Practica1_PasatiemposTrevi-o/commits/master">Página de los commits</a></li>
         </ul>
+        <h2>Practica 2: Carpeta en la organización</h2>
+        <p>En esta práctica se creó una carpeta personal en la organización y dentro de la misma se agregó un archivo llamado index.html.</p>
+        <ul>
+
+        </ul>
+        <h2>Practica 3: Rework a Pasatiempos Treviño</h2>
+        <p>Modificar la página pasatiempos que desarrollo en su cuenta personal. Está practica consiste en realizar la versión 2 sobre sus pasatiempos, pero esta vez se tiene que guardar en la organización. Se solicita que utilice 5 archivos html para la información de sus pasatiempos. En cada documento html utilice etiquetas de estructura (header,nav, main,aside,footer).</p>
+        <ul>
+            
+        </ul>
     </main>
     <aside></aside>
     <footer></footer>
