avanze del trabajo

--- a/KingBootleg/PasatiemposVer2/index.html
+++ b/KingBootleg/PasatiemposVer2/index.html
@@ -12,9 +12,10 @@
     <ul>
         <li><a href="juegos.html">Videojuegos</a></li>
         <li><a href="musica.html">Musica</a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+        <li><a href="mangacomic.html"></a></li>
+        <li><a href="convivir.html"></a></li>
         <li><a href="metas.html">Mis Metas</a></li>
+        <li><a href="dormir.html">Extra: Dormir</a></li>
     </ul>
 </body>
 </html>
