commit en clase

--- a/oswtobias06/pasatiempos2/index.html
+++ b/oswtobias06/pasatiempos2/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>pasatiempos2</title>
 </head>
 <body>
-    <header></header>
-    <nav></nav>
+    <header>
+        <h1>Pasatiempos - Oswaldo Tobias</h1>
+    </header>
+    <nav>
+        <li><a href="pag1.html">Pagina 1</a></li>
+        <li><a href="pag2.html">Pagina 2</a></li>
+        <li><a href="pag3.html">Pagina 3</a></li>
+        <li><a href="pag4.html">Pagina 4</a></li>
+        <li><a href="pag5.html">Pagina 5</a></li>
+    </nav>
     <main></main>
     <aside></aside>
     <footer></footer>
