--- a/oswtobias06/pasatiempos2/pag1.html
+++ b/oswtobias06/pasatiempos2/pag1.html
@@ -3,13 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cine</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Cine</h1>
+    </header>
     <nav></nav>
-    <main></main>
+    <main>
+        <h3> Ver peliculas o series</h3>
+        <p>En las noches cuando tengo tiempo libre, suelo ver algun tipo de contenido de esto, ahorita estoy viendo Solar Opposities, una serie que me encanta por el humor que maneja.</p>
+        <img width="500" src="img/verseries.jpg" alt="series" srcset="">
+    </main>
     <aside></aside>
-    <footer></footer>
+    <footer>
+        <address>
+            <p>Desarrollado por Oswaldo Isai Tobias Torres</p>
+            <p>Ciudad General Escobedo, Nuevo León</p>
+        </address>
+        <b>
+            <a href="index.html">Volver a página principal</a>
+        </b>
+    </footer>
 </body>
 </html>
