--- a/oswtobias06/pasatiempos2/pag3.html
+++ b/oswtobias06/pasatiempos2/pag3.html
@@ -3,13 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Deportes</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Deportes</h1>
+    </header>
     <nav></nav>
-    <main></main>
+    <main>
+        <h3> Ver partidos de fútbol</h3>
+        <p>Uno de mis pasatiempos que hago con frecuencia es este, ya que cada vez que juega mi equipo de Tigres siempre planeo el día para quedar desocupado a la hora del juego. También cuando tengo tiempo me veo otros partidos que esten interesante como los que se jugaron en el mundial de clubes.</p>
+        <img width="500" src="img/futbol.jpg" alt="futbol" srcset="">
+    </main>
     <aside></aside>
-    <footer></footer>
+    <footer>
+        <address>
+            <p>Desarrollado por Oswaldo Isai Tobias Torres</p>
+            <p>Ciudad General Escobedo, Nuevo León</p>
+        </address>
+        <b>
+            <a href="index.html">Volver a página principal</a>
+        </b>
+    </footer>
 </body>
 </html>
