--- a/oswtobias06/pasatiempos2/pag2.html
+++ b/oswtobias06/pasatiempos2/pag2.html
@@ -3,13 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Musica</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Música</h1>
+    </header>
     <nav></nav>
-    <main></main>
+    <main>
+        <h3> Escuchar música</h3>
+        <p>Cuando hago tarea, voy de camino y regreso a lugares durante el trayecto, o solo para matar tiempo, me gusta poner musica para hacerlo mas llevadero. Principalmente trap, hip-hop y sus derivados, tambien algunos de banda.</p>        
+        <img width="500" src="img/musica.jpg" alt="series" srcset="">
+    </main>
     <aside></aside>
-    <footer></footer>
+    <footer>
+        <address>
+            <p>Desarrollado por Oswaldo Isai Tobias Torres</p>
+            <p>Ciudad General Escobedo, Nuevo León</p>
+        </address>
+        <b>
+            <a href="index.html">Volver a página principal</a>
+        </b>
+    </footer>
 </body>
 </html>
