--- a/oswtobias06/pasatiempos2/pag4.html
+++ b/oswtobias06/pasatiempos2/pag4.html
@@ -3,13 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>figuras coleccionables</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Figuras coleccionables</h1>
+    </header>
     <nav></nav>
-    <main></main>
+    <main>
+        <h3> Armar figuras Magic block</h3>
+        <p>Estas figuras son personajes famosos armables con bloques parecidos a legos, y es muy entretenido estar ahi armandolos, personalmente me gusta mucho armarlos y coleccionarlos, actualmente cuento con 3 figuritas que son bob esponja, hulk y shadow.</p>
+        <img width="500" src="img/magicblock.jpg" alt="magicblock" srcset="">
+    </main>
     <aside></aside>
-    <footer></footer>
+    <footer>
+        <address>
+            <p>Desarrollado por Oswaldo Isai Tobias Torres</p>
+            <p>Ciudad General Escobedo, Nuevo León</p>
+        </address>
+        <b>
+            <a href="index.html">Volver a página principal</a>
+        </b>
+    </footer>
 </body>
 </html>
