Avance en clase

--- a/CarlosPortalesM/pasatiemposver2/pagina2.html
+++ b/CarlosPortalesM/pasatiemposver2/pagina2.html
@@ -6,10 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+    <h1>Segundo pasatiempo</h1>
+    <h2>Jugar Minecraft &copy;</h2>
+    </header>
     <nav></nav>
-    <main></main>
+    <main>
+        <img src="img/minecraft.jpg" alt="Persona jugando minecraft" height="300" width="500">
+        <p>Minecraft se convirtió rápidamente en mi videojuego favorito, lo jugaba en su version Pocket Edition en el celular cuando era niño, después al comprar mi laptop lo descargué pirata (lo siento MOJANG), pero en la primera oportunidad que tuve de comprarlo en su versión 
+            de JAVA lo hice y ya lo tengo de manera legal lo cual me hace sentir orgulloso, este juego me encanta ya que deja volar tu creatividad siempre existiendo cosas que hacer, construir y optimizar haciéndolo muy divertido y hasta cierto punto educativo.
+        </p>
+    </main>
     <aside></aside>
-    <footer></footer>
+    <footer>
+        <a href="index.html">Volver a la página principal</a>
+    </footer>
 </body>
 </html>
