--- a/CarlosPortalesM/pasatiemposver2/pagina3.html
+++ b/CarlosPortalesM/pasatiemposver2/pagina3.html
@@ -6,10 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Tercer pasatiempo</h1>
+        <h2>Escuchar música</h2>
+    </header>
     <nav></nav>
-    <main></main>
+    <main>
+        <img src="img/spotify.jpg" alt="Celular reproduciendo spotify" height="300" width="500">
+        <p>El escuchar música se ha convertido en una de las actividades que más hago en mi día a día, al manejar, al hacer tarea (mientras hago esta página), cuando estoy en mi cuarto. Por esta razón siempre me gusta tener a la mano mis audífonos, 
+            honestamente me gusta variar mucho en mi gusto musical y estar abierto a escuchar muchos géneros distintos, también mucho depende de mi estado de ánimo, escuchar algo que me motive, algo que me ponga feliz o algo que me haga estar más triste, es algo muy importante por lo que la música
+            siempre me acompaña en todos mis altos y bajos momentos.
+        </p>
+    </main>
     <aside></aside>
-    <footer></footer>
+    <footer>                
+        <a href="index.html">Volver a la página principal</a>
+    </footer>
 </body>
 </html>
