--- a/CarlosPortalesM/pasatiemposver2/index.html
+++ b/CarlosPortalesM/pasatiemposver2/index.html
@@ -6,8 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
-    <nav></nav>
+    <header><h1>Links de pasatiempos</h1></header>
+    <nav>
+        <li><a href="pagina1.html">Primer pasatiempo</a></li>
+        <li><a href="pagina2.html">Segundo pasatiempo</a></li>
+        <li><a href="pagina3.html">Tercer  pasatiempo</a></li>
+        <li><a href="pagina4.html">Cuarto pasatiempo</a></li>
+        <li><a href="pagina5.html">Formulario</a></li>
+    </nav>
     <main></main>
     <aside></aside>
     <footer></footer>
