--- a/CarlosPortalesM/pasatiemposver2/pagina1.html
+++ b/CarlosPortalesM/pasatiemposver2/pagina1.html
@@ -6,10 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
-    <nav></nav>
-    <main></main>
-    <aside></aside>
-    <footer></footer>
+    <header>
+        <h1>Primer pasatiempo</h1>
+        <h2>Coleccionar carros a escala</h2>
+    </header>
+    <main>
+        <img src="img/herbiediecast.jpg" alt="Carro a escala" height="300" width="500">
+        <p>Tengo este pasatiempo desde aproximadamente 3 años, llegando a una colección de cerca de 200 carros a escala, principalmente marcas como Hot Wheels, Johnny Lightning, entre algunas otras, la mayoría comprados en mercados de juguetes como la "Y Griega" 
+            o en tiendas comerciales, aparte de mis carros, he conseguido muchas buenas experiencias, he obtenido experiencia en compra y ventas y he conocido a personas con los mismos gustos que yo, mi favorito es un herbie igual al de la imagen pero lo conservo en su blister (empaque).
+        </p>
+    </main>
+    <footer>
+        <a href="index.html">Volver a la página principal</a>
+    </footer>
 </body>
 </html>
