--- a/CarlosPortalesM/pasatiemposver2/pagina4.html
+++ b/CarlosPortalesM/pasatiemposver2/pagina4.html
@@ -6,10 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Cuarto pasatiempo</h1>
+        <h2>Ver anime</h2>
+    </header>
     <nav></nav>
-    <main></main>
+    <main>
+        <img src="img/onepiece.jpg" alt="Anime one piece" height="300" width="500">
+        <p> Veo anime desde que era niño y cada vez fui afinando más mi gusto y llegué a animes como One Piece que es mi favorito y voy al corriente después de 1100 capitulos, pero dentro de mi top entran otros como HunterxHunter, Trigun, Afro Samurai y algunos otros que he visto pero no son mis favoritos como Naruto, Under Ninja, Akudama Drive,
+            todo lo que estos animes tienen en común es que al verlos y al ir avanzando en la trama estoy completamente envuelto e intrigado por lo que pasará, lo que más me gusta es ver como narran, plasman la historia y nos transmiten muchos sentimientos con dichas historias. A One Piece le dediqué (y le seguiré dedicando) mucho tiempo, aprovechando
+            la pandemia avancé mucho y lo volvería a hacer sin pensarlo.
+        </p>
+    </main>
     <aside></aside>
-    <footer></footer>
+    <footer>
+        <a href="index.html">Volver a la página principal</a>
+    </footer>
 </body>
 </html>
