--- a/diegoalgosa/paginaprincipal.html
+++ b/diegoalgosa/paginaprincipal.html
@@ -35,7 +35,7 @@
                 <p>Realizada el 22 de Agosto del 2025.</p>
                 <p>Se creo la carpeta con mi nombre para trabajar en la organizacion del grupo</p>
                 <ul>
-                    <li><a href="https://fdw52ad2025.github.io/website52/diegoalgosa/paginaprincipal.html">Pagina personal</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/blob/main/diegoalgosa/paginaprincipal.html">Pagina personal</a></li>
                     <li><a href=https://github.com/FDW52AD2025/website52/commit/79d7de93a788f983e79ad6f315d22e7e5525ee06>Commits</a></li>
                 </ul>
             </section>
