--- a/RdeReimer/pasaTimepoVer2/pagina1.html
+++ b/RdeReimer/pasaTimepoVer2/pagina1.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav style="display: flex; justify-content: center;">
+        <a class="navLinks" href="pagina1.html">Hobby1</a>
+        <a class="navLinks" href="pagina2.html">Hobby2</a>
+        <a class="navLinks" href="pagina3.html">Hobby3</a>
+        <a class="navLinks" href="pagina4.html">Hobby4</a>
+        <a class="navLinks" href="pagina5.html">Hobby5</a>
+    </nav>
+
     <header> <h1>Hobbys - Andres Leal</h1></header>
-       <!-- Seccion Musica -->
    <section>
     <header>
         <h2 class="musica">Musica</h2>
