imagen, clases y estilo página 1

--- a/FernandaGomezG/practica3/pagina1.html
+++ b/FernandaGomezG/practica3/pagina1.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis Hobbies</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <header>
         <main>
-            <h1>🎶✨ CONCIERTOS 🎶✨</h1>
-            <p></p>
+            <h1 class="titulos">🎶✨ CONCIERTOS 🎶✨</h1>
+            <p style="margin-left: 20px;" class="titulos">Ir a conciertos es de mis pasatiempos favoritos.</p>
+            <img src="img/concertpage.jpg.jpeg" alt="Concierto de Morat, 28 noviembre, 2025." class="concertimg">
         </main>
     </header>
 </body>
